# adk-simple-live

./: .env.template  .gitignore  README.md  pyproject.toml
adk_simple_live/: agent.py  requirements.txt
deployment/agent_engine/: deploy.sh  test_remote.py
deployment/gemini_ent/: deploy.sh
