[project]
name = "adk_simple_live"
version = "0.1.0"
description = "ADK Agent that answers questions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.19.0",
    "google-cloud-aiplatform[adk,agent-engines]>=1.126.1",
    "google-cloud-storage>=3.0.0",
    "pillow>=12.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[tool.setuptools]
packages = ["adk_simple_live"]
